--- a/product.html
+++ b/product.html
@@ -132,7 +132,7 @@
                             <div class="flex items-center gap-2 px-3 py-1.5 ${product.status === 'not_available' ? 'bg-red-500/10 border-red-500/20' : 'bg-green-500/10 border-green-500/20'} border rounded-lg">
                                 <div class="w-2 h-2 rounded-full ${product.status === 'not_available' ? 'bg-red-500 animate-pulse' : 'bg-green-500'}"></div>
                                 <span class="text-[11px] font-bold uppercase tracking-wider ${product.status === 'not_available' ? 'text-red-400' : 'text-green-400'}">
-                                    ${product.status === 'not_available' ? 'Not Available' : 'Available'}
+                                    ${product.status === 'not_available' ? 'Not Available' : `In Stock: ${product.stock || 0}`}
                                 </span>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                             <label class="text-slate-400">Quantity:</label>
                             <div class="flex items-center bg-slate-800 rounded-xl overflow-hidden border border-slate-700">
                                 <button onclick="adjustLocalQty(-1)" class="px-4 py-2 hover:bg-slate-700 transition-all font-bold text-xl">-</button>
-                                <input type="number" id="detailQty" value="1" min="1" class="w-16 bg-transparent text-center font-bold outline-none border-none">
+                                <input type="number" id="detailQty" value="1" min="1" max="${product.stock || 1}" class="w-16 bg-transparent text-center font-bold outline-none border-none">
                                 <button onclick="adjustLocalQty(1)" class="px-4 py-2 hover:bg-slate-700 transition-all font-bold text-xl">+</button>
                             </div>
                         </div>
