--- a/admin.html
+++ b/admin.html
@@ -47,6 +47,10 @@
                 class="px-4 py-2 border border-purple-600 hover:bg-purple-600/20 rounded-lg transition-all font-bold flex items-center gap-2">
                 <i class="fas fa-plus"></i> New Product
             </button>
+            <button id="generateStockBtn"
+                class="px-4 py-2 bg-cyan-600/20 text-cyan-400 border border-cyan-600/50 rounded-lg hover:bg-cyan-600 hover:text-white transition-all font-bold flex items-center gap-2">
+                <i class="fas fa-sync-alt"></i> Refill Inventory
+            </button>
         </div>
     </nav>
 
@@ -120,10 +124,15 @@
                         </select>
                     </div>
                 </div>
-                <div class="grid grid-cols-2 gap-4">
+                <div class="grid grid-cols-3 gap-4">
                     <div>
-                        <label class="block text-sm text-slate-400 mb-1">Warranty Period (Optional)</label>
+                        <label class="block text-sm text-slate-400 mb-1">Warranty</label>
                         <input type="text" id="prodWarranty" placeholder="e.g. 1 Year"
+                            class="w-full bg-slate-900 border border-slate-700 rounded-lg px-4 py-2 focus:border-cyan-500 outline-none">
+                    </div>
+                    <div>
+                        <label class="block text-sm text-slate-400 mb-1">Stock Qty</label>
+                        <input type="number" id="prodStock" required value="0"
                             class="w-full bg-slate-900 border border-slate-700 rounded-lg px-4 py-2 focus:border-cyan-500 outline-none">
                     </div>
                     <div>
@@ -193,6 +202,7 @@
                         <div>
                             <h4 class="font-bold">${p.name} <span class="text-cyan-500 text-xs ml-2">[${p.code || 'NO-CODE'}]</span></h4>
                             <p class="text-sm text-slate-400">Rs. ${parseFloat(p.price).toLocaleString()} | <span class="${p.status === 'not_available' ? 'text-red-400' : 'text-green-400'} text-[10px] font-bold uppercase">${p.status === 'not_available' ? 'Out of Stock' : 'Available'}</span></p>
+                            <p class="text-xs font-bold ${p.stock <= 5 ? 'text-orange-400' : 'text-slate-500'}">Inventory Level: ${p.stock || 0} Units</p>
                         </div>
                     </div>
                     <div class="flex gap-2">
@@ -297,6 +307,7 @@
                 price: document.getElementById('prodPrice').value,
                 category: document.getElementById('prodCategory').value,
                 warranty: document.getElementById('prodWarranty').value,
+                stock: parseInt(document.getElementById('prodStock').value) || 0,
                 status: document.getElementById('prodStatus').value,
                 // Keep old images if no new ones uploaded during edit
                 images: uploadedImages.length ? uploadedImages : (document.getElementById('prodId').value ? Storage.getProductById(document.getElementById('prodId').value).images : []),
@@ -332,6 +343,7 @@
                 document.getElementById('prodPrice').value = p.price;
                 document.getElementById('prodCategory').value = p.category;
                 document.getElementById('prodWarranty').value = p.warranty || '';
+                document.getElementById('prodStock').value = p.stock || 0;
                 document.getElementById('prodStatus').value = p.status || 'available';
 
                 const previewContainer = document.getElementById('imagePreviews');
@@ -340,6 +352,19 @@
 
                 document.getElementById('modalTitle').innerHTML = 'Edit <span class="text-cyan-400">System Entry</span>';
                 prodModal.classList.remove('hidden');
+            }
+        };
+
+        document.getElementById('generateStockBtn').onclick = () => {
+            if (confirm("Generate random stock levels (10-50 units) for all inventory items?")) {
+                const products = Storage.getProducts();
+                products.forEach(p => {
+                    p.stock = Math.floor(Math.random() * 41) + 10;
+                    if (p.stock > 0) p.status = 'available';
+                    Storage.saveProduct(p);
+                });
+                renderAdminProducts();
+                alert("Inventory stack replenished successfully!");
             }
         };
 
