--- a/index.html
+++ b/index.html
@@ -127,9 +127,12 @@
         <div class="flex justify-between items-center mb-12">
             <h2 class="text-3xl font-bold">Featured <span class="text-cyan-400">Products</span></h2>
             <div class="flex gap-2">
-                <button class="px-4 py-2 glass rounded-lg text-sm border-cyan-500 text-cyan-400">All</button>
-                <button class="px-4 py-2 glass rounded-lg text-sm hover:border-cyan-500 transition-all">Mobile</button>
-                <button class="px-4 py-2 glass rounded-lg text-sm hover:border-cyan-500 transition-all">Laptop</button>
+                <button
+                    class="category-btn px-4 py-2 glass rounded-lg text-sm border-cyan-500 text-cyan-400">All</button>
+                <button
+                    class="category-btn px-4 py-2 glass rounded-lg text-sm hover:border-cyan-500 transition-all">Mobile</button>
+                <button
+                    class="category-btn px-4 py-2 glass rounded-lg text-sm hover:border-cyan-500 transition-all">Laptop</button>
             </div>
         </div>
 
