--- a/admin.html
+++ b/admin.html
@@ -215,7 +215,7 @@
 
         function renderAdminOrders() {
             const orders = Storage.getOrders();
-            orderList.innerHTML = orders.reverse().map(o => `
+            orderList.innerHTML = orders.reverse().map((o, idx) => `
                 <div class="glass p-6 rounded-2xl border-l-4 border-purple-500">
                     <div class="flex flex-col md:flex-row justify-between mb-4 gap-4">
                         <div>
@@ -232,10 +232,10 @@
                         ${o.items.map(i => `<div>• ${i.name} x ${i.quantity}</div>`).join('')}
                     </div>
                     <div class="flex gap-3">
-                        <button onclick="notifyCustomer('${o.customer.phone}', 'payment')" class="flex-1 py-2 bg-green-600/20 text-green-400 border border-green-600/50 rounded-lg hover:bg-green-600 hover:text-white transition-all text-sm font-bold">
+                        <button onclick='notifyCustomer(${JSON.stringify(o).replace(/'/g, "&apos;")}, "payment")' class="flex-1 py-2 bg-green-600/20 text-green-400 border border-green-600/50 rounded-lg hover:bg-green-600 hover:text-white transition-all text-sm font-bold">
                             <i class="fab fa-whatsapp"></i> Confirm Payment
                         </button>
-                        <button onclick="notifyCustomer('${o.customer.phone}', 'shipment')" class="flex-1 py-2 bg-cyan-600/20 text-cyan-400 border border-cyan-600/50 rounded-lg hover:bg-cyan-600 hover:text-white transition-all text-sm font-bold">
+                        <button onclick='notifyCustomer(${JSON.stringify(o).replace(/'/g, "&apos;")}, "shipment")' class="flex-1 py-2 bg-cyan-600/20 text-cyan-400 border border-cyan-600/50 rounded-lg hover:bg-cyan-600 hover:text-white transition-all text-sm font-bold">
                             <i class="fab fa-whatsapp"></i> Ship Details
                         </button>
                     </div>
@@ -243,13 +243,21 @@
             `).join('') || '<div class="text-center opacity-30 py-20">No orders received yet.</div>';
         }
 
-        window.notifyCustomer = (phone, type) => {
+        window.notifyCustomer = (order, type) => {
+            const phone = order.customer.phone;
             let msg = "";
+
+            const itemDetails = order.items.map(i => `- ${i.name} x ${i.quantity}`).join('\n');
+
             if (type === 'payment') {
-                msg = "Hello! Your payment has been received successfully. We are preparing your high-tech items for dispatch. Thank you!";
+                const receivedAmount = prompt("Enter the amount received from customer:", order.total);
+                if (receivedAmount === null) return; // Cancelled
+
+                msg = `✅ *PAYMENT CONFIRMED*\n\nHello ${order.customer.name},\nWe have successfully received your payment of *Rs. ${parseFloat(receivedAmount).toLocaleString()}* for your order.\n\n📦 *Order Items:*\n${itemDetails}\n\nStatus: Preparing for dispatch. Thank you for shopping with HighTech Min!`;
             } else {
-                msg = "Hello! Great news, your shipment is on its way. Arrival expected soon! Track your order code: HT-" + Date.now().toString().slice(-6);
+                msg = `🚚 *SHIPMENT ALERT*\n\nGreat news ${order.customer.name}!\nYour high-tech module stack is now on its way.\n\n📦 *Items Shipped:*\n${itemDetails}\n\nTrack Code: HT-${Date.now().toString().slice(-6)}\nArrival expected soon!`;
             }
+
             // Ensure phone is in international format (strip leading 0 if present)
             let cleanPhone = phone.replace(/[^0-9]/g, '');
             if (cleanPhone.startsWith('0')) cleanPhone = '94' + cleanPhone.substring(1);
